# ClipShelf

./: .gitignore  CLAUDE.md  README.md  RELEASING.md  build-release.ps1  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
Docs/: ROADMAP.md  tauri-installer-mid-install-relaunch.md
Docs/Examples/: AI-Development-Guide.md  Architecture.md  Feature-Template.md  OptionsMania-Main-Doc-Index.md  Testing.md
Docs/Features/: Clip-Metadata-Interop.md
Docs/Verify/: 2026-07-05-manual-verification-checklist.md  2026-07-10-feature-batch-verification.md  2026-07-10-master-verification-checklist.md
Docs/future/: feature-ideas.md
Docs/specs/: 2026-04-15-gkey-mover-v2-design.md  2026-04-18-theming-system-design.md  2026-07-02-stability-cleanup-qol-design.md  2026-07-05-stability-round2-and-error-surface-design.md  2026-07-10-feature-batch-design.md  2026-07-12-game-detection-history-overlay-design.md  2026-07-19-overlay-command-center-design.md
Docs/superpowers/plans/: 2026-04-15-gkey-mover-v2.md  2026-07-12-phase1-game-detection-history.md  2026-07-12-phase2-history-panel.md  2026-07-12-phase3-overlay.md  2026-07-19-overlay-command-center.md
scripts/: dev-tauri.mjs
src/: App.tsx  FirstRunApp.tsx  OverlayApp.tsx  SettingsApp.tsx  TrayMenuApp.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clickthrough.rs  commands.rs  config.rs  events.rs  gamedetect.rs  history.rs  hotkeys.rs  keyhook.rs  lib.rs  logger.rs  main.rs  mover.rs  obs_ws.rs  overlay.rs  props.rs  sound.rs  state.rs  stats.rs  theme.rs  thumbs.rs  timer.rs  tray.rs  updater.rs  watcher.rs  window_layout.rs
src/components/: BottomBar.tsx  EntryContextMenu.tsx  EventLog.tsx  FirstRunDialog.tsx  HistoryPanel.tsx  KeybindInput.tsx  RenameDialog.tsx  SaveClipCalibration.tsx  SettingsForm.tsx  SettingsSheet.tsx  Sidebar.tsx  ThemePanel.tsx  TimerDisplay.tsx  TitleBar.tsx  Toaster.tsx  WindowChrome.tsx
src/components/ui/: tip.tsx
src/hooks/: useCountUp.ts  useEventLog.test.ts  useEventLog.ts  useObsStatus.ts  useTheme.ts  useTimer.ts  useWatcherStatus.ts
src/lib/: commands.ts  events.ts  overlayViewport.test.ts  overlayViewport.ts  systemTheme.ts  themes.ts  toast.ts
src/types/: index.ts
