[package]
name = "gkey-mover-v2"
version = "2.0.9"
description = "GKey Mover - Sort/rename OBS clips via G-key hotkeys"
authors = ["cbuzi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gkey_mover_v2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
tokio = { version = "1", features = ["full"] }
notify = "8"
rodio = "0.20"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
sha2 = "0.10"
base64 = "0.22"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
regex = "1"
opener = { version = "0.7", features = ["reveal"] }
tauri-plugin-autostart = "2"
windows-sys = { version = "0.59", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
] }

[dev-dependencies]
tempfile = "3"

